# flumen

./: .gitignore  LICENSE  README.md  compute_stats.py  dynamics.py  fhn-flow.py  fhn_flow.py  find_best_model.py  flow_model.py  interactive_test.py  join_csv.py  linsys_flow.py  meta.py  mse_new_inputs.py  mse_time_horizon.py  pendulum_flow.py  plot_predictions.py  predict_on_dataset.py  pyproject.toml  sample_dynamics.py  setup.py  sim_and_train.py  train.py  trajectory.py  utils.py  vdp_flow.py
experiments/: compute_stats.py  dynamics.py  fhn_flow.py  generate_data.py  greenshields_flow.py  hhfbe_flow.py  hhffe_flow.py  hhfs_flow.py  hhib_flow.py  hhrsa_flow.py  hhx_flow.py  initial_state.py  interactive_test.py  linsys_flow.py  load_data.py  meta.py  pendulum_flow.py  sequence_generators.py  sim_and_train.py  trajectory_sampler.py  twotank_flow.py  vdp_flow.py
experiments/scripts/: compute_stats.py  find_best_model.py  generate_cmdline.py  interactive_test.py  l4dc_loss_plot.py  l4dc_plot_predictions.py  mse_lr.py  mse_new_inputs.py  mse_time_horizon.py  plot_fhn_excitability.py  plot_losses.py  plot_noise.py  plot_stats.py  (+6 more)
flow_model/: __init__.py  experiment.py  model.py  run.py  train.py  trajectory.py  utils.py
flow_model_odedata/: __init__.py  data.py  meta.py  ode_experiment.py  run_experiment.py  sim_and_train.py  trajectory_generator.py  utils.py
ode_experiments/: compute_stats.py  fhn_flow.py  interactive_test.py  linsys_flow.py  load_data.py  pendulum_flow.py  sim_and_train.py  trajectory_generator.py  vdp_flow.py
scripts/: box_plot.py  mse_lr.py
(+7 files in other folders)
